# aimogus

./: .gitignore  README.md  eval_config.yaml  notes.md  pyproject.toml  run.py  run_evals.py
.notes/: readme.md
agents/: __init__.py  base_agent.py  env_adapter.py  local_agent.py  openai_agent.py  openrouter_agent.py
assets/: skeld_walkways_canvas_v1.json
envs/: action.py  game.py  player.py  tools.py
envs/configs/: game_config.py  map_config.py
evals/: __init__.py  calibration.py  config.py  configs.py  extractor.py  ground_truth.py  interview.py  judge.py  models.py  prompts.py  report.py  runner.py  sampler.py  truthfulqa.py
evals/metrics/: __init__.py  capabilities.py  deception_taxonomy.py  deceptive_alignment.py  elo.py  means_to_ends.py  sycophancy.py  win_rate.py
prompts/: __init__.py  action_prompt.py  meeting_prompt.py  phase_prompts.py  role_instructions.py  system_prompt.py  voting_prompt.py
replay/: log_parser.py  server.py
replay/static/: app.js  index.html  style.css
training/: __init__.py  checkpoint_eval.py  game_rollout.py  grpo.py  inference_batcher.py  modal_app.py  train.py  wandb_logger.py
treehacks/: run.py
treehacks/agents/: __init__.py  models.py  openai_agent.py
treehacks/envs/: action.py  player.py
treehacks/prompts/: __init__.py  action_prompt.py  meeting_prompt.py  phase_prompts.py  voting_prompt.py
wandb/: latest-run
wandb/run-20260215_021145-zjkpyeiy/: run-zjkpyeiy.wandb
wandb/run-20260215_021512-c85cowio/: run-c85cowio.wandb
wandb/run-20260215_021940-oma2qirg/: run-oma2qirg.wandb
(+28 files in other folders)
